# wasm-language-tools

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  Cargo.toml  README.md  cliff.toml  clippy.toml  deny.toml  dprint.json  pnpm-lock.yaml  pnpm-workspace.yaml
bindings/: Cargo.toml
bindings/pkg/: package.json
bindings/src/: lib.rs
crates/formatter/: Cargo.toml  README.md
crates/formatter/benches/: fmt.rs
crates/formatter/examples/: fmt.rs
crates/formatter/src/: config.rs  lib.rs
crates/formatter/src/printer/: helpers.rs  instr.rs  mod.rs  module.rs  ty.rs
crates/formatter/tests/: fmt.rs  inline.rs  parser.rs
crates/formatter/tests/parser/: address-malformed.snap  address.snap  annotations-malformed.snap  annotations.snap  array-malformed.snap  array.snap  binary.snap  block-malformed.snap  block.snap  bulk.snap  call-indirect.snap  const-malformed.snap  cont-malformed.snap  cont.snap  data-malformed.snap  data.snap  elem-malformed.snap  elem.snap  exports-malformed.snap  exports.snap  float-literals-malformed.snap  float-literals.snap  func-malformed.snap  func.snap  global-malformed.snap  global.snap  ident.snap  if-malformed.snap  if.snap  implicit-module.snap  imports-malformed.snap  imports.snap  incomplete-module.snap  int-literals-malformed.snap  int-literals.snap  loop-malformed.snap  loop.snap  memory-malformed.snap  memory.snap  module-malformed.snap  (+23 more)
crates/parser/: Cargo.toml  README.md
crates/parser/benches/: parser.rs
crates/parser/examples/: debug_cst.rs
crates/parser/src/: error.rs  lib.rs
crates/parser/src/parser/: instr.rs  mod.rs  module.rs  token.rs  ty.rs
crates/parser/src/parser2/: builder.rs  green.rs  helpers.rs  instr.rs  lexer.rs  mod.rs  module.rs  ty.rs
crates/parser/tests/: parse.rs
crates/parser/tests/parse/: address-malformed.snap  address-malformed.wat  address.snap  address.wat  annotations-malformed.snap  annotations-malformed.wat  annotations.snap  annotations.wat  array-malformed.snap  array-malformed.wat  array.snap  array.wat  binary.snap  binary.wat  block-malformed.snap  block-malformed.wat  block.snap  block.wat  bulk.snap  bulk.wat  call-indirect.snap  call-indirect.wat  const-malformed.snap  const-malformed.wat  cont-malformed.snap  cont-malformed.wat  cont.snap  cont.wat  data-malformed.snap  data-malformed.wat  data.snap  data.wat  elem-malformed.snap  elem-malformed.wat  elem.snap  elem.wat  exports-malformed.snap  exports-malformed.wat  exports.snap  exports.wat  (+83 more)
crates/server/: Cargo.toml
crates/server/src/: binder.rs  diag.rs  files.rs  lib.rs  main.rs  message.rs  parser.rs  sent.rs  server.rs  stdio.rs
crates/server/src/features/: definition.rs
crates/server/tests/: server.rs
crates/service/: Cargo.toml  README.md
crates/service/benches/: changed.rs  diagnostics.rs  unchanged.rs
crates/service/src/: binder.rs  cfa.rs  config.rs  dataset.rs  deprecation.rs  document.rs  exports.rs  files.rs  helpers.rs  idx.rs  imex.rs  lib.rs  mutability.rs  syntax_tree.rs  types_analyzer.rs  uri.rs
crates/service/src/checker/: block_type.rs  br_table_branches.rs  catch_type.rs  const_expr.rs  cont_type.rs  deprecated.rs  dup_names.rs  elem_type.rs  global_expr.rs  global_mut.rs  immediates.rs  implicit_module.rs  import_occur.rs  import_with_def.rs  lane.rs  literal_operands.rs  mem_arg.rs  mem_type.rs  mod.rs  multi_memories.rs  multi_modules.rs  multi_starts.rs  mutated_immutable.rs  needless_mut.rs  needless_try_table.rs  new_non_defaultable.rs  omitted_idx_in_instr.rs  operand_amount.rs  packing.rs  plain_instr.rs  shadow.rs  start.rs  subtyping.rs  syntax.rs  table_type.rs  tag_type.rs  type_misuse.rs  typeck.rs  undef.rs  uninit.rs  (+5 more)
crates/service/src/data_set/: instr_meta.rs  mod.rs
crates/service/src/features/: call_hierarchy.rs  code_action.rs  code_lens.rs  completion.rs  definition.rs  diagnostics.rs  document_highlight.rs  document_symbol.rs  execute_command.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hint.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  type_hierarchy.rs
crates/service/src/refactorings/: add_omitted_idx.rs  add_result_types.rs  br_if_to_if_br.rs  clean_no_types.rs  convert_idx.rs  expand_compact_import.rs  expand_ref_type.rs  export_as.rs  extract_export.rs  fix_invalid_mem_arg.rs  fix_packing.rs  func_header_join.rs  func_header_split.rs  idx_conversion.rs  if_br_to_br_if.rs  inline_export.rs  inline_extern_type.rs  inline_func_type.rs  join_types.rs  merge_to_return_call.rs  mod.rs  params_join.rs  params_split.rs  remove_mut.rs  simplify_ref_type.rs  split_types.rs
crates/service/src/types_analyzer/: def_type.rs  extractor.rs  instr.rs  mod.rs  renderer.rs  resolver.rs  signature.rs  stack.rs  types.rs
crates/service/tests/: completion.rs  features.rs
crates/service/tests/call_hierarchy/: mod.rs
crates/service/tests/code_action/: add_omitted_idx.rs  add_result_types.rs  br_if_to_if_br.rs  clean_no_types.rs  expand_compact_import.rs  expand_ref_type.rs  export_as.rs  extract_export.rs  fix_invalid_mem_arg.rs  fix_packing.rs  func_header_join.rs  func_header_split.rs  idx_conversion.rs  if_br_to_br_if.rs  inline_export.rs  inline_extern_type.rs  inline_func_type.rs  join_types.rs  merge_to_return_call.rs  mod.rs  params_join.rs  params_split.rs  remove_mut.rs  simplify_ref_type.rs  split_types.rs
crates/service/tests/code_lens/: mod.rs
crates/service/tests/completion/: annotation.rs  array.rs  block.rs  cont.rs  data.rs  elem.rs  field.rs  func.rs  func_type.rs  global.rs  import.rs  instr.rs  keyword.rs  local.rs  mem_arg.rs  memory.rs  mod.rs  param.rs  ref_instr.rs  result.rs  structs.rs  table.rs  tag.rs  ty_decl.rs
crates/service/tests/definition/: goto_declaration.rs  goto_definition.rs  goto_type_definition.rs  mod.rs
crates/service/tests/diagnostics/: block_type.rs  br_table_branches.rs  catch_type.rs  const_expr.rs  cont_type.rs  deprecated.rs  dup_names.rs  elem_type.rs  lane.rs  (+36 more)
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: helpers.rs  kind.rs  lib.rs
(+1459 files in other folders)
