[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
criterion = "0.5"
insta = { version = "1.42", features = ["glob", "json"] }
line-index = "0.1"
lspt = { version = "0.1", features = ["rustc-hash"] }
rowan = "0.16"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar-asserts = "1.6"
