[package]
name = "binding_wasm"
version = "0.0.0"
description = "WebAssembly binding of WebAssembly Language Tools."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.126" # don't forget to update jobs in .github/workflows/{release,website}.yml
wat_formatter = { workspace = true }
wat_parser = { workspace = true }
wat_service = { workspace = true }
wat_syntax = { workspace = true }

[lints]
workspace = true
