[package]
name = "wat_formatter"
version = "0.10.1"
description = "WebAssembly Text Format formatter."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm", "formatter"]
exclude = ["/tests"]

[dependencies]
line-index = { workspace = true }
serde = { workspace = true }
tiny_pretty = "0.2"
wat_syntax = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
similar-asserts = { workspace = true }
wat_parser = { workspace = true }

[[bench]]
name = "fmt"
harness = false

[lints]
workspace = true
