[package]
name = "wat_parser"
version = "0.5.0"
description = "WebAssembly Text Format concrete syntax tree parser."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2021"
categories = ["parser-implementations", "text-processing"]
keywords = ["wasm", "parser"]
exclude = ["/tests"]

[dependencies]
rowan.workspace = true
wat_syntax = { path = "../syntax", version = "0.5" }
winnow = { version = "0.7", features = ["unstable-recover"] }

[dev-dependencies]
codespan-reporting = "0.11"
insta.workspace = true
similar-asserts.workspace = true

[lints.clippy]
dbg_macro = "warn"
