[package]
name = "wat_parser"
version = "0.5.0"
description = "WebAssembly Text Format concrete syntax tree parser."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2021"
categories = ["parser-implementations", "text-processing"]
keywords = ["wasm", "parser"]
exclude = ["/tests"]

[dependencies]
rowan.workspace = true
wat_syntax = { path = "../syntax", version = "0.5" }

[dev-dependencies]
codespan-reporting = "0.12"
criterion.workspace = true
insta.workspace = true
similar-asserts.workspace = true

[[bench]]
name = "parser"
harness = false

[lints.clippy]
dbg_macro = "warn"
