[package]
name = "wat_server"
version = "0.5.1"
description = "WebAssembly Text Format language server."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm"]
exclude = ["/tests"]

[dependencies]
anyhow = "1.0"
fern = "0.7"
humantime = "2.3"
log = "0.4"
lspt.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
wat_service = { path = "../service", version = "0.5" }

[dev-dependencies]
assert_cmd = "2.0"

[lints.clippy]
dbg_macro = "warn"
