[package]
name = "wat_server"
version = "0.7.0"
description = "WebAssembly Text Format language server."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm"]
exclude = ["/tests"]

[dependencies]
anyhow = "1.0"
fern = "0.7"
humantime = "2.3"
log = "0.4"
lspt.workspace = true
rayon = "1.11"
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
wat_service = { path = "../service", version = "0.7" }

[dev-dependencies]
assert_cmd = "2.1"

[package.metadata.binstall]
pkg-fmt = "zip"
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-macos{ archive-suffix }"
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-arm64-macos{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-linux{ archive-suffix }"
[package.metadata.binstall.overrides.x86_64-pc-windows-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-x86_64-windows{ archive-suffix }"

[lints.clippy]
dbg_macro = "warn"
