[package]
name = "wat_service"
version = "0.8.0"
description = "WebAssembly Text Format language service."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm"]
exclude = ["/tests"]

[dependencies]
fuzzy-matcher = "0.3"
indexmap = "2.12"
itertools = "0.14"
line-index = { workspace = true }
lspt = { workspace = true }
parking_lot = "0.12"
petgraph = "0.8"
rowan = { workspace = true }
rustc-hash = { workspace = true }
salsa = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = "1.15"
wat_formatter = { path = "../formatter", version = "0.8" }
wat_parser = { path = "../parser", version = "0.8" }
wat_syntax = { path = "../syntax", version = "0.8" }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }

[lints.clippy]
dbg_macro = "warn"

[[bench]]
name = "unchanged"
harness = false
[[bench]]
name = "changed"
harness = false
[[bench]]
name = "diagnostics"
harness = false
