[package]
name = "wat_service"
version = "0.11.0"
description = "WebAssembly Text Format language service."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm"]
exclude = ["/tests"]

[dependencies]
bumpalo = { workspace = true }
hashbrown = { version = "0.17", default-features = false, features = ["inline-more", "allocator-api2"] }
indexmap = "2.14"
itertools = "0.14"
line-index = { workspace = true }
lspt = { workspace = true }
parking_lot = "0.12"
petgraph = "0.8"
rustc-hash = { workspace = true }
salsa = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
similar = "3.1"
wat_formatter = { workspace = true }
wat_parser = { workspace = true }
wat_syntax = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "unchanged"
harness = false
[[bench]]
name = "changed"
harness = false
[[bench]]
name = "diagnostics"
harness = false
