[package]
name = "wat_syntax"
version = "0.5.0"
description = "WebAssembly Text Format syntaxes."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2021"
keywords = ["wasm"]

[dependencies]
rowan.workspace = true

[lints.clippy]
dbg_macro = "warn"
