[package]
name = "wat_syntax"
version = "0.8.0"
description = "WebAssembly Text Format syntaxes."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm"]

[dependencies]
rowan.workspace = true

[lints.clippy]
dbg_macro = "warn"
