[package]
name = "wat_syntax"
version = "0.11.0"
description = "WebAssembly Text Format syntaxes."
authors = ["Pig Fang <g-plane@hotmail.com>"]
repository = "https://github.com/g-plane/wasm-language-tools"
license = "MIT"
edition = "2024"
keywords = ["wasm"]

[dependencies]
servo_arc = "0.4"
text-size = "1.1"

[lints]
workspace = true
